Make payment instrument labels dynamic

BUG=715075

Review-Url: https://codereview.chromium.org/2912453002
Cr-Commit-Position: refs/heads/master@{#475063}

Former-commit-id: d84e0a6943fb2d5081ff2519a862395b9b26e107