components/payments/core/autofill_payment_instrument.cc
@@ -30,10 +30,6 @@ AutofillPaymentInstrument::AutofillPaymentInstrument(
     PaymentRequestDelegate* payment_request_delegate)
     : PaymentInstrument(
           method_name,
-          /* label= */ card.NetworkAndLastFourDigits(),
-          /* sublabel= */
-          card.GetInfo(autofill::AutofillType(autofill::CREDIT_CARD_NAME_FULL),
-                       app_locale),
           autofill::data_util::GetPaymentRequestData(card.network())
               .icon_resource_id,
           PaymentInstrument::Type::AUTOFILL),
@@ -107,6 +103,15 @@ void AutofillPaymentInstrument::RecordUse() {
   // Record the use of the credit card.
   payment_request_delegate_->GetPersonalDataManager()->RecordUseOf(
       credit_card_);
+}
+
+base::string16 AutofillPaymentInstrument::GetLabel() const {
+  return credit_card_.NetworkAndLastFourDigits();
+}
+
+base::string16 AutofillPaymentInstrument::GetSublabel() const {
+  return credit_card_.GetInfo(
+      autofill::AutofillType(autofill::CREDIT_CARD_NAME_FULL), app_locale_);
 }
 
 void AutofillPaymentInstrument::OnFullCardRequestSucceeded(
